Fixing error : not showing short_description on banner

--- a/frontend/src/components/Banner/styles.scss
+++ b/frontend/src/components/Banner/styles.scss
@@ -73,5 +73,8 @@
       color: white;
       margin-bottom: 20px;
     }
+    .banner-sub {
+      color: white;
+    }
   }
 }
